@@ -27,10 +27,7 @@
 #include <pwd.h>
 #include <netdb.h>
 
-#include <krb5/krb5.h>
-#include <krb5/asn1.h>
-#include <krb5/los-proto.h>
-#include <krb5/ext-proto.h>
+#include "krb5.h"
 
 /* Decode, decrypt and store the forwarded creds in the local ccache. */
 krb5_error_code
