@@ -64,12 +64,8 @@ char copyright[] =
 #endif
 
 #ifdef KERBEROS
-#include <krb5/krb5.h>
-#include <krb5/asn1.h>
-#include <krb5/mit-des.h>
-#include <krb5/los-proto.h>
-
-#include <com_err.h>
+#include "krb5.h"
+#include "com_err.h"
      
 #ifdef BUFSIZ
 #undef BUFSIZ
